--- a/src/Components/ProductCard/ProductCard.css
+++ b/src/Components/ProductCard/ProductCard.css
@@ -1,6 +1,7 @@
 .ProductCard {
     background: var(--secondary-clr);
     height: 285px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .ProductCard .img-wrapper {
@@ -36,7 +37,7 @@
     text-transform: uppercase;
     font-size: .9rem;
     font-weight: bold;
-    color: var(--main-dark);
+    color: var(--primary-clr);
 }
 
 .ProductCard .price {
