--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -24,7 +24,7 @@
 
 .About .bg-color {
     width: 100%;
-    height: 80vh; 
+    height: 90vh; 
     background-color: var(--primary-clr);
 }
 
@@ -134,5 +134,10 @@
 
     .About .about-wrapper {
         height: 100vh;
+    }
+
+    .About .text-wrapper {
+        width: 80%;
+        margin: auto;
     }
 }
