--- a/src/Components/NewProductCard/NewProductCard.css
+++ b/src/Components/NewProductCard/NewProductCard.css
@@ -50,6 +50,7 @@
     overflow: hidden;
     overflow-wrap: break-word;
     text-overflow: ellipsis;
+    color: #000;
 }
 
 
@@ -64,22 +65,27 @@
 }
 
 .NewProductCard .popular {
-    background: #fff6dd;
+    background: #FFE18C;
 }
 
 .NewProductCard .new {
-    background: #dde9ff;
+    background: #A8C7FF;
 }
 
 .NewProductCard .tag p {
     transform: rotate(90deg) translateX(1.5rem);
     font-size: .8rem;
     font-weight: bold;
+    color: #000;
 }
 
 
 
 /* ------- SALDO --------- */
+
+.NewProductCard .price {
+    color: #000;
+}
 
 .NewProductCard .saldo {
     width: 150px;
@@ -93,11 +99,11 @@
 }
 
 .NewProductCard .low {
-    background: rgba(255, 166, 0, 0.274);
+    background: rgba(255, 166, 0, 0.599);
 }
 
 .NewProductCard .low p {
-    color: orange;
+    color: rgb(0, 0, 0);
 }
 
 .NewProductCard .out {
@@ -105,7 +111,7 @@
 }
 
 .NewProductCard .out p {
-    color: red;
+    color: rgb(0, 0, 0);
 }
 
 
