--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,8 @@
     }
 
     :root {
-        --primary-clr: #856C48;
-        --secondary-clr: #D2C6B7;
+        --primary-clr: #856c48;
+        --secondary-clr: #d2c6b7;
         --black-clr: #0E0E0E;
         --background-clr: #F3EEE7;
         --yeseva-header-font: 'Yeseva One', cursive;
