--- a/src/Components/NewProductCard/NewProductCard.css
+++ b/src/Components/NewProductCard/NewProductCard.css
@@ -35,7 +35,7 @@
 }
 
 .NewProductCard .text-div {
-    padding: 1.5rem 0 0 1rem;
+    padding: 2.5rem 0 0 1rem;
     /* flex: 1; */
     width: 50%;
     /* justify-self: end; */
@@ -51,6 +51,7 @@
     overflow-wrap: break-word;
     text-overflow: ellipsis;
     color: #000;
+    font-size: 1rem;
 }
 
 
