--- a/src/Views/Products/ProductsView.css
+++ b/src/Views/Products/ProductsView.css
@@ -1,7 +1,8 @@
-.ProductsView .container {
-    /* width: min(80%, 1200px);
-    margin: auto; */
-}
+/* .ProductsView .container {
+    width: min(80%, 1200px);
+    margin: auto;
+} */
+
 .ProductsView {
     padding-top: 12rem;
     padding-bottom: 10rem;
@@ -65,6 +66,11 @@
 
 .ProductsView .vegan {
     background-color: #4c9a2a;
+}
+
+.ProductsView .info-text {
+    text-align: center;
+    margin-top: 1rem;
 }
 
 
