--- a/src/Views/Products/ProductsView.css
+++ b/src/Views/Products/ProductsView.css
@@ -38,9 +38,9 @@
 
 .ProductsView .allergies-wrap {
     display: flex;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     align-items: center;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
 }
 
 .ProductsView .allergies-icon {
@@ -58,8 +58,8 @@
     color: #000;
 }
 
-.ProductsView .allergies-icon .active {
-    border: 1px solid #000;
+.ProductsView .allergies-icon.active {
+    border: 2px solid #000;
 }
 
 .ProductsView .gluten {
@@ -100,9 +100,38 @@
     visibility: visible;
 }
 
+.ProductsView .flex-div {
+    margin-bottom: 2rem;
+}
+
+.ProductsView .header-div h1 {
+    margin-top: 1rem;
+    color: var(--primary-clr);
+    font-family: var(--yeseva-header-font);
+    text-transform: uppercase;
+    font-size: 2.5rem;
+
+}
+
+
 
 /* ---- HIGHLIGHT ---- */
 
 .ProductsView .highLight {
     box-shadow: rgb(255, 255, 255) 0px 0px 0px 6px,  rgb(0, 0, 0) 0px 0px 0px 8px;
+}
+
+
+@media (min-width: 992px) {
+    .ProductsView .flex-div {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row-reverse;
+        align-items: flex-start;
+        padding-top: 3rem;
+    }
+
+    .ProductsView .header-div h1 {
+        margin-top: 0;
+    }
 }
