--- a/src/Views/Products/ProductsView.css
+++ b/src/Views/Products/ProductsView.css
@@ -118,7 +118,8 @@
 /* ---- HIGHLIGHT ---- */
 
 .ProductsView .highLight {
-    box-shadow: rgb(255, 255, 255) 0px 0px 0px 6px,  rgb(0, 0, 0) 0px 0px 0px 8px;
+    /* box-shadow: rgb(255, 255, 255) 0px 0px 0px 6px,  rgb(0, 0, 0) 0px 0px 0px 8px; */
+    background-color: var(--secondary-clr);
 }
 
 
