--- a/src/Components/NewProductCard/NewProductCard.css
+++ b/src/Components/NewProductCard/NewProductCard.css
@@ -9,6 +9,11 @@
     cursor: pointer;
 }
 
+.NewProductCard.highLight {
+    /* box-shadow: rgb(255, 255, 255) 0px 0px 0px 6px,  rgb(0, 0, 0) 0px 0px 0px 8px; */
+    background: var(--secondary-clr);
+}
+
 .NewProductCard .top-div {
     display: flex;
 }
