--- a/src/Views/Products/ProductsView.css
+++ b/src/Views/Products/ProductsView.css
@@ -44,13 +44,15 @@
 
 .ProductsView .allergies-wrap {
     display: flex;
+    justify-content: space-between;
+    width: 110px;
     /* justify-content: flex-end; */
     align-items: center;
     /* margin-bottom: 2rem; */
 }
 
 .ProductsView .allergies-icon {
-    margin-right: 1rem;
+    /* margin-right: 1rem; */
     background-color: #fff;
     width: 30px;
     height: 30px;
