--- a/src/Views/Reviews/ReviewsView.css
+++ b/src/Views/Reviews/ReviewsView.css
@@ -69,7 +69,7 @@
 
   .Reviews .title {
     font-family: var(--yeseva-header-font);
-    color: var(--secondary-clr);
+    color: var(--primary-clr);
     font-size: 25px;
     text-transform: uppercase;
     margin-block: 2rem .5rem;
