--- a/src/Views/Products/ProductsView.css
+++ b/src/Views/Products/ProductsView.css
@@ -31,6 +31,18 @@
     cursor: pointer;
 }
 
+.ProductsView .to-top-div {
+    display: flex;
+    justify-content: center;
+    padding-top: 4rem;
+    cursor: pointer;
+}
+.ProductsView .to-top {
+    width: 55px;
+    height: 55px;
+    color: var(--secondary-clr);
+}
+
 
 /* -- CATEGORY -- */
 
@@ -52,7 +64,7 @@
 .ProductsView .allergies-wrap {
     display: flex;
     justify-content: space-between;
-    width: 110px;
+    width: 115px;
     /* justify-content: flex-end; */
     align-items: center;
     /* margin-bottom: 2rem; */
