--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -26,15 +26,13 @@
     left: calc(50% - 70px);
     user-select: none;
     opacity: 100;
-    display: block;
-    
-    transition: all 250ms ease-in;
+    transition: all 450ms ease-in;
 }
 
 .Navbar img.small-logo {
+    transform: translateY(-200px);    
     opacity: 0;
     /* user-select: none; */
-    display: none;
 }
 
 .Navbar .bars,
@@ -181,6 +179,10 @@
     
     .Navbar .btn-order {
         font-size: .8rem;
+    }
+
+    .Navbar img.small-logo {
+        transform: translate(-100px, -200px);  
     }
 
     .Navbar img {
