--- a/src/Views/DetailView/DetailView.css
+++ b/src/Views/DetailView/DetailView.css
@@ -35,6 +35,7 @@
 
 .DetailView .wrapper {
     display: block;
+    background-color: #fff;
 }
 
 /* -- IMG --- */
@@ -45,6 +46,7 @@
     justify-content: center;
     align-items: center;
     height: 300px;
+    position: relative;
 }
 
 .DetailView .img-wrapper img{
@@ -88,6 +90,7 @@
 .DetailView .text-wrapper h1 {
     font-family: var(--yeseva-header-font);
     color: var(--primary-clr);
+    text-transform: uppercase;
 }
 /* --- TEXT WRAPPER END --- */
 
@@ -168,6 +171,11 @@
     text-align: right;
     padding-block: 1rem;
     font-style: italic;
+}
+
+
+.DetailView .marked {
+    background-color: var(--primary-clr);
 }
 /* --- INFO END --- */
 @media (min-width: 992px) {
