--- a/src/Views/DetailView/DetailView.css
+++ b/src/Views/DetailView/DetailView.css
@@ -17,7 +17,7 @@
 .DetailView .pbl-2{
     margin-block: 1.5rem;
     overflow-y: auto;
-    max-height: 250px;
+    max-height: 220px;
     padding-right: 1rem;
 }
 .DetailView .mt-1{
@@ -136,6 +136,7 @@
     background-color: var(--primary-clr);
     color: #fff;
     font-weight: bold;
+    letter-spacing: 1px;
 }
 .DetailView .btn-add:hover {
     background-color: #6d522c;
@@ -146,6 +147,53 @@
     cursor: not-allowed;
     background: #a5a5a5;
     color: #3b3b3b;
+}
+
+.DetailView .radio {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: .5rem;
+    border-top: 1px solid var(--secondary-clr);
+    padding-top: 1rem;
+}
+
+.DetailView .input-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: .5rem;
+    margin-bottom: 1rem;
+}
+
+.DetailView .input-div input {
+    cursor: pointer;
+    appearance: none;
+    width: 1.55em;
+    height: 1.55em;
+    border: 2px solid var(--primary-clr);
+    border-radius: 50%;
+    background: white;
+    display: grid;
+    place-content: center;
+}
+
+.DetailView .input-div input:before {
+    content: '';
+    width: 1.10em;
+    height: 1.10em;
+    border-radius: 50%;
+    transform: scale(0);
+    transition: 120ms ease-in-out;
+    box-shadow: inset 1em 1em var(--primary-clr);
+}
+
+.DetailView .input-div input:checked:before {
+    transform: scale(1);
+}
+
+.DetailView .flex-grow {
+    flex-grow: 1;
 }
 
 /* -- PRICE AND ADD END */
