--- a/src/Components/Modal33/Modal33.css
+++ b/src/Components/Modal33/Modal33.css
@@ -15,6 +15,17 @@
     display: block;
 }
 
+.Modal33 .close-btn {
+    background: transparent;
+    border: none;
+}
+
+/* -- ANIMATION -- */
+.animate__animated.animate_fadeInUp {
+    --animation-duration: .5s;
+    --animation-delay: .5s;
+}
+
 .Modal33 .modal {
     background-color: #fff;
     max-width: 600px;
@@ -33,8 +44,8 @@
     background-color: #fff;
     border-radius: 50%;
     position: fixed;
-    top: .5rem;
-    right: 1rem;
+    top: 1vh;
+    right: 4vw;
     z-index: 5000;
 }
 
@@ -241,9 +252,24 @@
     border-radius: 3px;
 }
 
-.Modal33 .op-title {
+/* -- TOP HEADER ON OPTION -- */
+.Modal33 .titel-wrapper h3 {
     font-weight: bold;
 }
+
+.Modal33 .title-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.Modal33 .close-icon {
+    width: 1.8rem;
+    height: 1.8rem;
+    cursor: pointer;
+}
+
+
+/* -- CLOSE HEADER ON OPTION END -- */
 
 .Modal33 .input {
     margin-right: .5rem;
@@ -309,6 +335,10 @@
     transform: rotate(45deg);
 }
 
+.Modal33 .struckOut {
+    text-decoration: line-through;
+}
+
 
 
 @media (min-width: 600px) {
@@ -323,8 +353,8 @@
     }
 
     .Modal33 .btn-close {
-        top: 6rem;
-        right: 41rem;
+        top: 10vh;
+        right: 35vw;
     }
     
 }
